--- a/src/setup_payload/tests/BUILD.gn
+++ b/src/setup_payload/tests/BUILD.gn
@@ -34,6 +34,7 @@ chip_test_suite("tests") {
 
   public_deps = [
     "${chip_root}/src/setup_payload",
+    "${chip_root}/src/lib/support:testing",
     "${nlunit_test_root}:nlunit-test",
   ]
 }
